<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

	<EditText
		android:id="@+id/activityOutputs"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="0dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@drawable/rounded_edittext"
		android:hint="@string/activityOutputHint"
		android:inputType="none"
		android:paddingBottom="10dp"
		android:paddingLeft="15dp"
		android:paddingRight="10dp"
		android:paddingTop="10dp"
		android:textColor="@color/darkgrey"
		android:textColorHint="#969696"
		android:textSize="17sp"
		android:textStyle="bold"
		android:cursorVisible="false" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/outputListView" />

    <Button
	          android:id="@+id/backbutton"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:layout_gravity="center|bottom"
	          android:layout_marginBottom="10dp"
	          android:layout_marginLeft="10dp"
	          android:layout_marginRight="10dp"
	          android:layout_marginTop="10dp"
	          android:padding="10dp"
	          android:text="@string/back"
		android:textColor="@color/darkgrey"
	          android:textSize="22sp"
	          android:textStyle="bold" />
    
    <Button
	          android:id="@+id/savebutton"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:layout_gravity="center|bottom"
	          android:layout_marginLeft="10dp"
	          android:layout_marginRight="10dp"
	          android:layout_marginTop="10dp"
	          android:padding="10dp"
	          android:text="@string/save"
		android:textColor="@color/darkgrey"
	          android:textSize="22sp" />

</LinearLayout>