<!--  TODO Graph View , Still not complete-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/activityTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:textColor="@color/darkgrey"
                android:textSize="14sp"
                android:text="@string/addcohortactivity_name_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activityTitleTextView"
                android:layout_marginLeft="71dp"
                android:layout_marginStart="71dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/activityTitle"
                android:layout_toEndOf="@+id/activityTitle"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cohortdetailsactivity_description_label"
                android:id="@+id/activityDescription"
                android:layout_below="@+id/activityTitleTextView"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:textColor="@color/darkgrey"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activityDescriptionTextView"
                android:paddingTop="15dp"
                android:layout_alignTop="@+id/activityDescription"
                android:layout_alignLeft="@+id/activityTitleTextView"
                android:layout_alignStart="@+id/activityTitleTextView"
                android:textSize="14sp" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/outcomeGraph"
            android:layout_width="fill_parent"
            android:layout_height="240dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            />

        <Button
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/addnewactivity"
            android:textStyle="bold"
            android:id="@+id/addnewactivitybutton"/>

        <Button
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/addnewmeasurement"
            android:textStyle="bold"
            android:id="@+id/addnewmeasurementbutton"/>

    </LinearLayout>

</ScrollView>