<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cohortNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addcohortactivity_name_label"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/primary_dark_material_light"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_edittext"
        android:inputType="textCapWords"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/darkgrey"
        android:textSize="17sp"
        android:textStyle="bold">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/cohortDescriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addcohortactivity_description_label"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:textColor="@color/primary_dark_material_light"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activityDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/darkgrey"
        android:textSize="17sp"
        android:textStyle="bold"
        android:inputType="textMultiLine"
        android:lines="3"
        android:gravity="top|left" />

    <Button
	          android:id="@+id/savecohortbutton"
	          android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:layout_marginBottom="10dp"
	          android:layout_marginLeft="10dp"
	          android:layout_marginRight="10dp"
	          android:layout_marginTop="30dp"
	          android:padding="10dp"
	          android:text="@string/save"
	          android:textColor="@android:color/white"
	          android:textSize="22sp"
	          android:textStyle="bold" />

</LinearLayout>
</ScrollView>
